tests/rosetta/out/Rust/church-numerals-1.error
parse: error[P999]: /workspace/mochi/tests/rosetta/x/Mochi/church-numerals-1.mochi:4:11: unexpected token "fun" (expected TypeVariant ("|" TypeVariant)*)
  --> /workspace/mochi/tests/rosetta/x/Mochi/church-numerals-1.mochi:4:11

  4 | type Fn = fun(any): any
    |           ^

help:
  Parse error occurred. Check syntax near this location.